Details
-
Bug
-
Resolution: Fixed
-
Critical
-
7.0.1
-
Untriaged
-
-
1
-
Yes
Description
Build: 7.0.1-5981 not seen on 7.0.1-5962
Test: phase_change_time100M_bktop.test
Crash observed as
Core was generated by `/opt/couchbase/bin/eventing-consumer perf-test1 af_unix /tmp/127.0.0.1:8091_8_1'.
|
#0 0x00007f54a3b6ef57 in pthread_join () from /lib64/libpthread.so.0
|
warning: File "/opt/couchbase/lib/libstdc++.so.6.0.28-gdb.py" auto-loading has been declined by your `auto-load safe-path' set to "$debugdir:$datadir/auto-load:/usr/bin/mono-gdb.py".
|
#0 0x00007f54a3b6ef57 in pthread_join () from /lib64/libpthread.so.0
|
#1 0x00007f54a4369f53 in __gthread_join (__value_ptr=0x0, __threadid=<optimized out>) at /tmp/deploy/objdir/x86_64-pc-linux-gnu/libstdc++-v3/include/x86_64-pc-linux-gnu/bits/gthr-default.h:669
|
#2 std::thread::join (this=0x744e10) at /tmp/deploy/objdir/../gcc-10.2.0/libstdc++-v3/src/c++11/thread.cc:110
|
#3 0x00000000004234ee in main ()
|
Test job http://perf.jenkins.couchbase.com/job/themis/11724/consoleFull
Attachments
Issue Links
- is a backport of
-
MB-47758 Performance: crash dump generated
-
- Closed
-
For Gerrit Dashboard: MB-48118 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
160068,2 | MB-48118: Don't clear buffer message when bytes received by libuv is 0 | cheshire-cat | eventing | Status: MERGED | +2 | +1 |