MB-48118: Don't clear buffer message when bytes received by libuv is 0

BP of MB-47758

Change-Id: I1600e1d398e1d76a132cfe4e25bd10ef1a5aa8d5
Reviewed-on: http://review.couchbase.org/c/eventing/+/159865
Reviewed-by: Jeelan Basha Poola <jeelan.poola@couchbase.com>
Reviewed-by: CI Bot
Tested-by: <ankit.prabhu@couchbase.com>
(cherry picked from commit 998639163ccbbf04702dbe18aafbe5ffa79e0363)
Reviewed-on: http://review.couchbase.org/c/eventing/+/160068
Well-Formed: Restriction Checker